DEV6_Componentslist/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountKey__c</fullName>
        <label>AccountKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <label>Account Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Of_Operation__c</fullName>
        <label>Area of Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_or_Building_Society_Name__c</fullName>
        <label>Bank or Building Society Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch_Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Key__c</fullName>
        <label>Branch Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Branch)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Prefrence__c</fullName>
        <label>Contact Prefrence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDD__c</fullName>
        <label>EDD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Source_Date__c</fullName>
        <label>Email Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Due_Date__c</fullName>
        <label>Expected Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New Sign Up</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <label>Include</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <formula>$User.Mail__c =TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <label>MailingLatitude</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongtitude__c</fullName>
        <label>MailingLongtitude</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Longtitude__c</fullName>
        <label>Mailing Longtitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Maximum_Clients_per_Course__c</fullName>
        <label>Maximum Clients per Course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Places_Per_Course__c</fullName>
        <label>Maximum Places Per Course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcode__c</fullName>
        <formula>Left(MailingPostalCode, FIND (&quot; &quot;,MailingPostalCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_1_Date__c</fullName>
        <label>Phone_1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone_1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2_Date__c</fullName>
        <label>Phone_2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone_2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practitioner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefered_First_Name__c</fullName>
        <label>Prefered First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deregistering__c</fullName>
        <label>Reason for Deregistering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Date__c</fullName>
        <label>Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Distance__c</fullName>
        <label>Travel Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid_To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_de_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box is created for volunteer de-registration</description>
        <label>Volunteer de-registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gaid__Active_Gift_Aid_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Gift Aid Declaration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>gaid__Gift_Aid_Declaration__c.gaid__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gaid__Gift_Aid_Declaration__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gaid__Active_Gift_Aid_Declarations__c</fullName>
        <label>Active Gift Aid Declarations</label>
        <summaryFilterItems>
            <field>gaid__Gift_Aid_Declaration__c.gaid__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>gaid__Gift_Aid_Declaration__c.gaid__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <inlineHelpText>WARNING - This field may not accurately reflect the donation history. Please use the Last Gift Date field instead.</inlineHelpText>
        <label>DEPRECATED - Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WARNING- This field may not accurately reflect donation histories. Please use the Total Amount field on the Contact record instead.</inlineHelpText>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</description>
        <inlineHelpText>Excludes this Contact from One to One or Bucket account processing.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>NO LONGER USED - Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>DEPRECATED - _SYSTEM: ACCOUNT PROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-to-One</fullName>
                    <default>true</default>
                    <label>One-to-One</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated field.  Do not use.</description>
        <inlineHelpText>This field is no longer used and should not be referenced. It has been replaced by Type_of_Account__c</inlineHelpText>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See excluded Opportunity Record types, excluded Opportunity types in Household setting for &apos;always roll up to primary&apos; (exclude non individual Accounts).  Do not update.  Updated by automatic process.</description>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <description>Formula: Clone of the Household Mailing address (also a Formula)</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;,

Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; IF(ISBLANK(Account.BillingCity), &quot;&quot;, &quot;, &quot;) &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; IF(ISBLANK(Account.BillingCountry), &quot;&quot;, BR()&amp; Account.BillingCountry),

npo02__Household__r.npo02__Formula_MailingAddress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <description>Formula: Simple formula of Household Phone field.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__HouseholdPhone__c,
npo02__Household__r.npo02__HouseholdPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <description>Formula: Last Close Date field of the related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__LastCloseDate__c,
npo02__Household__r.npo02__LastCloseDate__c)</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>System field: do not change. Updated by automatic processes. Do not edit.</description>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
</CustomObject>